# jiap

./: .gitignore  README.md  README_zh.md  RELEASE.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.cursor-plugin/: plugin.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-cli.yml  build-decx.yml  build-distribute-jiap-core.yml  build-jiap.yml
.opencode/: INSTALL.md
.opencode/plugins/: decx.js
agents/: decx-coverage.md  decx-recon.md  decx-report.md  decx-trace.md
cli/: .eslintrc.json  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
cli/scripts/: build.mjs
cli/src/: index.ts
cli/tests/: adb.test.ts  api.test.ts  client-helper.test.ts  client.test.ts  config.test.ts  errors.test.ts  framework-packer.test.ts  framework-processor.test.ts  framework.test.ts  global-setup.js  hash.test.ts  (+8 more)
decx/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
decx/decx-plugin/src/main/resources/mcp/: decx_mcp_server.py  pyproject.toml
hooks/: session-start
jiap/: build.gradle.kts  settings.gradle.kts
jiap_core/: .gitignore  build.gradle.kts  settings.gradle.kts
jiap_server/: .gitignore  build.gradle.kts  run_jadx_server.sh  run_jiap_server.sh  settings.gradle.kts
jiap_skill/: SKILL.md
mcp_server/: README.md  jiap_mcp_server.py  mcp_server.py  pyproject.toml
preprocessor/: README.md  collect_framework.py
prompts/: android_framework_security_engineer.md  android_security_engineer.md
(+424 files in other folders)
