[project]
name = "jiap-mcp-server"
version = "0.3.0"
description = "JIAP MCP Server for Java Intelligence Analysis Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp<3",
    "requests>=2.31.0"
]

[tool.setuptools]
py-modules = ["jiap_mcp_server"]

[project.scripts]
jadx_mcp_server = "jiap_mcp_server:main"
