[project]
name = "decx-mcp-server"
version = "1.0.0"
description = "DECX MCP Server - Decompiler + X"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp<3",
    "requests>=2.31.0"
]

[tool.setuptools]
py-modules = ["decx_mcp_server"]

[project.scripts]
decx_mcp_server = "decx_mcp_server:main"
